# pytionalization

./: LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: black.yml  tests.yml
examples/: basic.py  en.json  pl.json
src/pytionalization/: __init__.py  i18n.py
tests/: tests.py
